fix: change user item alignment from center to flex-start for improved layout

--- a/2-css-avanzado/1-flexbox/assets/css/styles.css
+++ b/2-css-avanzado/1-flexbox/assets/css/styles.css
@@ -28,7 +28,7 @@ main {
 
     .user-item {
       display: flex;
-      justify-content: center;
+      justify-content: flex-start;
       align-items: center;
       padding: 10px;
       border-bottom: 1px solid #ccc;
